z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ img.social {
 	bottom: 0;
 	min-width: 100%;
 	min-height: 100%;
+	z-index: -1;
 }
 
 /*
